Fixes trucks APIs error format

--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -4,7 +4,7 @@
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
-        <div class="main-right col-xs-9">
+        <div class="main-right col-xs-9" ng-controller="TrucksController">
 
             <h3>Trucks</h3>
             <button class="btn btn-blue  pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
