--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -48,7 +48,7 @@
                             <label for="contact" class="col-sm-4 pall-zero col-xs-12">Contact Number</label>
                             <div class="col-xs-12 col-sm-8">
                                 <input ng-model="account.contact" type="number" class="form-control" id="contact"
-                                       placeholder="Contact Number">
+                                       placeholder="Contact Number" min="1000000000">
                             </div>
                         </div>
 
