--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -187,6 +187,10 @@ body{
     background-color: rgba(25, 149, 199, .6);
     border-color: rgba(25, 149, 199, .6);
 }
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
+ background-color: transparent;
+    color: #d9534f;
+}
 #ui-grid-twbs #ui-grid-twbs .form-horizontal .form-group:before,
 #ui-grid-twbs #ui-grid-twbs .form-horizontal .form-group:after,
 #ui-grid-twbs #ui-grid-twbs .btn-toolbar:before,
