--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -45,26 +45,6 @@
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-
-                            <label for="freightAmount" class="col-xs-12 col-sm-4 pall-zero">Freight Amount</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input ng-model="trip.freightAmount" type="number" class="form-control"
-                                       id="freightAmount"
-                                       placeholder="Freight Amount">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-xs-12">
-                        <div class="form-group col-xs-12">
-                            <label for="balance" class="col-xs-12 col-sm-4 pall-zero">Balance</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input ng-model="trip.balance" type="number" class="form-control" id="balance"
-                                       placeholder="Balance">
-                            </div>
-                        </div>
-
-                        <div class="form-group col-xs-12">
                             <label for="tripLane" class="col-xs-12 col-sm-4 pall-zero">Trip Lane</label>
                             <div class="col-sm-8 col-xs-12">
                                 <select ng-model="trip.tripLane"
@@ -74,21 +54,105 @@
                                 </select>
                             </div>
                         </div>
-
                         <div class="form-group col-xs-12">
-                            <label for="advance" class="col-xs-12 col-sm-4 pall-zero">Advance</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="trip.advance" type="number" class="form-control" id="advance"
-                                       placeholder="Advance">
+                            <label for="from" class="col-xs-12 col-sm-4 pall-zero">From</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.from" type="text" class="form-control"
+                                       id="from"
+                                       placeholder="From">
                             </div>
                         </div>
+                        <div class="form-group col-xs-12">
+                            <label for="to" class="col-xs-12 col-sm-4 pall-zero">To</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.to" type="text" class="form-control"
+                                       id="to"
+                                       placeholder="To">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="tonnage" class="col-xs-12 col-sm-4 pall-zero">Tonnage</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.tonnage" type="text" class="form-control"
+                                       id="tonnage"
+                                       placeholder="Tonnage">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="rate" class="col-xs-12 col-sm-4 pall-zero">Rate</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.rate" type="text" class="form-control"
+                                       id="rate"
+                                       placeholder="Rate">
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-sm-6 col-xs-12">
                         <div class="form-group col-xs-12">
                             <label for="tripExpenses" class="col-xs-12 col-sm-4 pall-zero">Trip Expenses</label>
                             <div class="col-sm-8 col-xs-12">
                                 <input ng-model="trip.tripExpenses" type="number" class="form-control"
                                        id="tripExpenses"
                                        placeholder="Trip Expenses">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="dieselAmount" class="col-xs-12 col-sm-4 pall-zero">Diesel Amount</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.dieselAmount" type="number" class="form-control" id="dieselAmount"
+                                       placeholder="Diesel Amount">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="tollgateAmount" class="col-xs-12 col-sm-4 pall-zero">Tollgate Amount</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.tollgateAmount" type="number" class="form-control" id="tollgateAmount"
+                                       placeholder="tollgateAmount">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="bookLoad" class="col-xs-12 col-sm-4 pall-zero">Book Load</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.bookLoad" type="number" class="form-control"
+                                       id="bookLoad"
+                                       placeholder="Book Load">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="freightAmount" class="col-xs-12 col-sm-4 pall-zero">Freight Amount</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.freightAmount" type="number" class="form-control" ng-change="calculateBalance()"
+                                       id="freightAmount"
+                                       placeholder="Freight Amount">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="advance" class="col-xs-12 col-sm-4 pall-zero">Advance</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.advance" type="number" class="form-control" id="advance" ng-change="calculateBalance()"
+                                       placeholder="Advance">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="balance" class="col-xs-12 col-sm-4 pall-zero">Balance</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.balance" type="number" class="form-control" id="balance"
+                                       placeholder="Balance" readonly>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="paymentType" class="col-xs-12 col-sm-4 pall-zero">Payment Type</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.paymentType" type="text" class="form-control" id="paymentType"
+                                       placeholder="Payment Type">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label for="remarks" class="col-xs-12 col-sm-4 pall-zero">Remarks</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.remarks" type="text" class="form-control" id="remarks"
+                                       placeholder="Remarks">
                             </div>
                         </div>
                     </div>
