Adds dates in maintainence page

--- a/client/views/partials/Maintenance/maintenanceEdit.html
+++ b/client/views/partials/Maintenance/maintenanceEdit.html
@@ -48,7 +48,7 @@
                         <div class="form-group col-xs-12">
                             <label for="date" class="col-sm-4 col-xs-12 pall-zero">Date</label>
                             <div class="col-xs-12 col-sm-8">
-                                    <date-picker id="date" ban-future="'banFutureDate'" ng-model="expenseDate"></date-picker>
+                                    <date-picker id="date" ban-future="'banFutureDate'" ng-model="maintenanceDetails.date"></date-picker>
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
