--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -73,7 +73,7 @@
                         <div class="form-group col-xs-12">
                             <label for="tonnage" class="col-xs-12 col-sm-4 pall-zero">Tonnage</label>
                             <div class="col-sm-8 col-xs-12">
-                                <input ng-model="trip.tonnage" type="text" class="form-control"
+                                <input ng-model="trip.tonnage" type="number" class="form-control"
                                        id="tonnage"
                                        placeholder="Tonnage">
                             </div>
@@ -81,7 +81,7 @@
                         <div class="form-group col-xs-12">
                             <label for="rate" class="col-xs-12 col-sm-4 pall-zero">Rate</label>
                             <div class="col-sm-8 col-xs-12">
-                                <input ng-model="trip.rate" type="text" class="form-control"
+                                <input ng-model="trip.rate" type="number" class="form-control"
                                        id="rate"
                                        placeholder="Rate">
                             </div>
