--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -166,7 +166,7 @@
                 </form>
             </div>
 
-            <div class="main-right col-xs-9">
+            <div class="main-right col-xs-9" ng-show="showHistory">
                 <div class="col-md-12 account-edit">
                     <h3 class="login-heading col-md-3">Payment History</h3>
                     <button class="btn btn-primary col-md-1" ng-click="addPaymentFlag()">Add</button>
