--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary" ng-click="addTripPayment()">Submit</button>
-                            <input type="button" value="Cancel" class="btn btn-red" ng-click="addPaymentFlag()"/>
+                            <input type="button" value="Cancel" class="btn btn-red" ng-click="removePaymentFlag()"/>
                         </div>
                     </form>
                 <!--</div>-->
