--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -20,9 +20,7 @@
                         <div class="form-group col-xs-12">
                             <label for="registrationNo" class="col-sm-4 col-xs-12 pall-zero">Registration No</label>
                             <div class="col-xs-12 col-sm-8">
-                                <select ng-model="trip.registrationNo"
-                                        ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"
-                                        class="form-control" id="registrationNo">
+                                <select ng-model="trip.registrationNo" ng-options="truck._id as truck.registrationNo for truck in trucks" type="text" class="form-control" id="registrationNo" ng-change="assignDriver()">
                                 </select>
                             </div>
                         </div>
