--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,6 +13,7 @@
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="../components/ng-table/bundles/ng-table.css">
 </head>
 
 <body ng-app="EasyGaadi">
@@ -69,6 +70,9 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
+<script src="components/ng-table/bundles/ng-table.js"></script>
+
+
 
 <!--app-->
 <script src="js/app.js"></script>
@@ -78,6 +82,8 @@
 <script src="js/directives/leftNav.js"></script>
 <script src="js/directives/datePicker.js"></script>
 <script src="js/directives/bodyMenu.js"></script>
+<script src="js/services/paginationService"></script>
+
 
 
 <!--controllers-->
