--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -25,6 +25,13 @@
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Tonnage :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input type="text" class="form-control" ng-model="truck.tonnage"
+                                   placeholder="Tonnage"/>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Modal and Year :</label>
                         <div class="col-sm-8 col-xs-12">
                             <input type="text" class="form-control" ng-model="truck.modelAndYear"
@@ -33,22 +40,21 @@
                     </div>
 
                     <div class="form-group col-xs-12">
-                        <label class="col-sm-4 pall-zero">Driver </label>
+                        <label class="col-sm-4 pall-zero">Driver:</label>
                         <div class="col-sm-8 col-xs-12">
                             <select id="driver" ng-options="driver._id as driver.fullName for driver in drivers"
                                     class="form-control" ng-model="truck.driverId" required></select>
                         </div>
                     </div>
 
+                </div>
+                <div class="col-sm-6 col-xs-12 mt-10">
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Fitness Expiry :</label>
                         <div class="col-sm-8 col-xs-12">
                             <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"></date-picker>
                         </div>
                     </div>
-
-                </div>
-                <div class="col-sm-6 col-xs-12 mt-10">
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Permit Expiry :</label>
                         <div class="col-sm-8 col-xs-12">
