Fixing pagination for trip lanes

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -82,7 +82,7 @@
 <script src="js/directives/leftNav.js"></script>
 <script src="js/directives/datePicker.js"></script>
 <script src="js/directives/bodyMenu.js"></script>
-<script src="js/services/paginationService"></script>
+<script src="js/services/paginationService.js"></script>
 
 
 
