edit and delete fixed in trip lane module

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,7 +13,7 @@
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" href="../js/lib/ng-table/bundles/ng-table.css">
+    <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
 </head>
 
 <body ng-app="EasyGaadi">
@@ -70,7 +70,6 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
-<script src="../js/lib/ng-table/bundles/ng-table.js"></script>
 
 
 
@@ -84,7 +83,7 @@
 <script src="js/directives/bodyMenu.js"></script>
 <script src="js/services/paginationService.js"></script>
 <script src="js/directives/checkList.js"></script>
-
+<script src="js/lib/bundles/ng-table.js"></script>
 
 <!--controllers-->
 <script src="js/modules/nav.js"></script>
